--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "react-scripts": "^5.0.1",
         "react-syntax-highlighter": "^15.5.0",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "webpack": "^5.92.1"
     },
     "scripts": {
         "start": "PORT=3001 react-scripts start",
